[package]
name = "rust-hn"
version = "0.1.0"
authors = ["bramw0 <bramweessies@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }
ureq = { version = "2.0.2", features = ["json"] }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = "1.0"
time = { version = "0.2.25", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.4.5"
webbrowser = "0.5.5"
directories = "3.0.1"
tini = "1.0.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["async_tokio"] }
tokio = { version = "1.3.0", features = ["full"] }
reqwest = { version = "0.11.2", features = ["json"] }

[[bench]]
name = "items"
harness = false

[lib]
name = "api"
path = "src/api.rs"

[[bin]]
name = "hntui"
path = "src/main.rs"
